--- a/app/src/main/res/layout/fragment_schedule.xml
+++ b/app/src/main/res/layout/fragment_schedule.xml
@@ -8,8 +8,8 @@
 
     <TableLayout
         android:id="@+id/fragment_schedule"
-        android:layout_width="match_parent"
-        android:layout_height="522dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:stretchColumns="1"
         android:weightSum="6">
@@ -165,43 +165,43 @@
 
         <TableRow android:id="@+id/timeslot_11">
 
-        <TextView
-        android:layout_column="0"
-        android:padding="3dip"
-        android:text="@string/timeslot_11" />
+            <TextView
+                android:layout_column="0"
+                android:padding="3dip"
+                android:text="@string/timeslot_11" />
         </TableRow>
 
         <TableRow android:id="@+id/timeslot_12">
 
-        <TextView
-        android:layout_column="0"
-        android:padding="3dip"
-        android:text="@string/timeslot_12" />
+            <TextView
+                android:layout_column="0"
+                android:padding="3dip"
+                android:text="@string/timeslot_12" />
         </TableRow>
 
         <View
-        android:layout_height="2dip"
-        android:background="#FF909090" />
+            android:layout_height="2dip"
+            android:background="#FF909090" />
 
         <TableRow android:id="@+id/timeslot_13">
 
-        <TextView
-        android:layout_column="0"
-        android:padding="3dip"
-        android:text="@string/timeslot_13" />
+            <TextView
+                android:layout_column="0"
+                android:padding="3dip"
+                android:text="@string/timeslot_13" />
         </TableRow>
 
         <TableRow android:id="@+id/timeslot_14">
 
-        <TextView
-        android:layout_column="0"
-        android:padding="3dip"
-        android:text="@string/timeslot_14" />
+            <TextView
+                android:layout_column="0"
+                android:padding="3dip"
+                android:text="@string/timeslot_14" />
         </TableRow>
 
         <View
-        android:layout_height="2dip"
-        android:background="#FF909090" />
+            android:layout_height="2dip"
+            android:background="#FF909090" />
 
         <TableRow
             android:id="@+id/timeslot_15"
