--- a/app/src/main/res/layout/activity_google_login.xml
+++ b/app/src/main/res/layout/activity_google_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.jamal.orderhr_noninstant.Activities.GoogleLoginActivity">
+    tools:context="com.example.jamal.orderhr_noninstant.Activities.Login.GoogleLoginActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
