--- a/app/src/main/res/layout/content_google_login.xml
+++ b/app/src/main/res/layout/content_google_login.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.jamal.orderhr_noninstant.Activities.GoogleLoginActivity"
+    tools:context="com.example.jamal.orderhr_noninstant.Activities.Login.GoogleLoginActivity"
     tools:showIn="@layout/activity_google_login">
 
 
