--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -56,7 +56,6 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="251dp"
         android:layout_marginTop="8dp"
         android:layout_toEndOf="@+id/previousWeek"
         android:onClick="ClickReserve"
@@ -64,8 +63,8 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/lesson"
-        app:layout_constraintTop_toBottomOf="@+id/verticalScheduleView" />
+        app:layout_constraintTop_toBottomOf="@+id/verticalScheduleView"
+        app:layout_constraintVertical_bias="1.0" />
 
 
     <ScrollView
