--- a/app/src/main/res/layout/fragment_defunct_list_item.xml
+++ b/app/src/main/res/layout/fragment_defunct_list_item.xml
@@ -23,6 +23,13 @@
                 android:layout_weight="1"
                 android:text="TextView" />
 
+            <TextView
+                android:id="@+id/textviewHandled"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Handled:" />
+
         </LinearLayout>
 
         <TextView
